# Things-AI

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
src/things_ai/: __init__.py  llm.py  things_ai.py  things_writer.py
